--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           Medical & Hair Clinic Sites
         </a>
       </span>
-      <span>📂: 
+      <span>📂:     
+        <a class="underline hover:text-gray-200" href="https://hairclinicistanbul.co" target="_blank">
+          https://hairclinicistanbul.co
     </div>
   </div>
 </div>
