--- a/index.html
+++ b/index.html
@@ -598,8 +598,7 @@
         <span class="font-semibold">personalized care</span> 💖✨.
       </p>
       <p class="mb-3">
-        ✨ Comprehensive services include world-class medical care, full patient assistance, and guidance throughout your medical holiday 🌍.  
-        We proudly offer trusted expertise, comfort, and international support every step of the way. Get a free consultation today! 💖
+        🌍 We proudly offer trusted expertise, comfort, and international support every step of the way. Get a free consultation today! 💖
       </p>
     </div>
 
