--- a/index.html
+++ b/index.html
@@ -625,10 +625,10 @@
 
       <!-- Social Media Links -->
       <div class="mt-4 flex space-x-4">
-        <a href="https://www.facebook.com/MedicalParkHG/" class="hover:text-red-400 transition">Facebook</a>
-        <a href="https://www.instagram.com/medicalpark" class="hover:text-red-400 transition">Instagram</a>
-        <a href="https://tr.linkedin.com/company/medical-park-hastaneler-grubu" class="hover:text-red-400 transition">LinkedIn</a>
-        <a href="https://turkeymedicals.com/hair-transplant" class="hover:text-red-400 transition">Hair Transplant</a>
+        <a href="https://www.facebook.com/MedicalParkHG/" rel="nofollow" class="hover:text-red-400 transition">Facebook</a>
+        <a href="https://www.instagram.com/medicalpark" rel="nofollow" class="hover:text-red-400 transition">Instagram</a>
+        <a href="https://tr.linkedin.com/company/medical-park-hastaneler-grubu" rel="nofollow" class="hover:text-red-400 transition">LinkedIn</a>
+        <a href="https://hairclinicistanbul.co" class="hover:text-red-400 transition">Hair Of Istanbul Prices</a>
       </div>
 
       <!-- Domain Links -->
