--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       Compare <span class="font-semibold text-red-400">clinic prices and plastic surgeon costs</span> in Turkey to find your ideal option for hair restoration and facial aesthetics.
     </p>
 
-    <a href="https://turkeymedicals.com/face-lift/rhytidectomy-face" class="bg-red-600 text-white font-semibold px-8 py-4 rounded-full shadow-lg hover:bg-red-500 transition text-lg inline-flex items-center space-x-3">
+    <a href="https://turkeymedicals.com" class="bg-red-600 text-white font-semibold px-8 py-4 rounded-full shadow-lg hover:bg-red-500 transition text-lg inline-flex items-center space-x-3">
       <span>📅 Book Your Hair Transplant Consultation in Turkey</span>
     </a>
 
