--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Istanbul Hair Transplant Clinics & Turkey Plastic Surgeon Cost</title>
+  <title>Istanbul Hair Transplant Clinics & Plastic Surgeon Cost HairTransplantIstanbul </title>
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="Compare Istanbul hair transplant clinics and top plastic surgeons in Turkey. Learn about FUE, DHI, and Sapphire hair restoration options performed by experienced specialists at affordable costs.">
@@ -49,7 +49,7 @@
   <div class="container mx-auto flex justify-between items-center py-4 px-6">
     <div class="text-2xl font-bold flex items-center space-x-2">
       <span class="text-yellow-300">💎</span>
-      <span>TurkeyMedicals – Hair Transplant & Plastic Surgery</span>
+      <span>Turkey Medicals – HairTransplantIstanbul Guide</span>
     </div>
 
     <nav class="hidden md:flex space-x-6 font-semibold">
@@ -127,19 +127,19 @@
     </h1>
 
     <p class="text-lg md:text-2xl mb-6 max-w-4xl mx-auto">
-      Achieve natural and permanent results with expert <a href="https://turkeymedicals.com/face-lift" class="underline font-bold hover:text-red-400">FUE Hair Transplant in Turkey</a> 🇹🇷.  
+      Achieve natural and permanent results with expert <a href="https://turkeymedicals.com/hair-transplant" class="underline font-bold hover:text-red-400">FUE Hair Transplant in Turkey</a> 🇹🇷.  
       From <a href="https://turkeymedicals.com/face-lift/eyelid-surgery-blepharoplasty" class="underline font-bold hover:text-red-400">Eyelid Surgery (Blepharoplasty) in Turkey</a> 👁️,  
-      <a href="https://turkeymedicals.com/hair-transplant/fue" class="underline font-bold hover:text-red-400">Istanbul FUE Hair Transplant Clinics</a> ✨,  
-      <a href="https://turkeymedicals.com/face-lift/brow-lift" class="underline font-bold hover:text-red-400">Brow Lift Operations in Istanbul & Antalya</a> ✨,  
-      <a href="https://turkeymedicals.com/face-lift/canthoplasty" class="underline font-bold hover:text-red-400">Canthoplasty Eye Surgery in Turkey</a> 👁️,  
-      <a href="https://turkeymedicals.com/face-lift/cheek-augmentation" class="underline font-bold hover:text-red-400">Cheek Enhancement in Antalya</a> 😊,  
-      <a href="https://turkeymedicals.com/face-lift/jaw-augmentation" class="underline font-bold hover:text-red-400">Jaw Augmentation & Contouring in Turkey</a> ⚖️,  
+      <a href="https://turkeymedicals.com/hair-transplant/fue" class="underline font-bold hover:text-red-400">Istanbul FUE Hair Transplant Clinics</a> ✨,
       <a href="https://turkeymedicals.com/face-lift/lip-augmentation" class="underline font-bold hover:text-red-400">Lip Augmentation Clinics in Turkey</a> 👄,  
       <a href="https://turkeymedicals.com/face-lift/mentoplasty-chin" class="underline font-bold hover:text-red-400">Chin Surgery (Mentoplasty) in Istanbul & Antalya</a> 💎,  
       <a href="https://turkeymedicals.com/face-lift/otoplasty-ear" class="underline font-bold hover:text-red-400">Otoplasty (Ear Surgery) in Turkey</a> 👂,  
       <a href="https://turkeymedicals.com/face-lift/rhytidectomy-face" class="underline font-bold hover:text-red-400">Rhytidectomy (Full Facelift) in Turkey</a> 🏥,  
       <a href="https://turkeymedicals.com/face-lift/rhinoplasty-nose" class="underline font-bold hover:text-red-400">Rhinoplasty (Nose Surgery) in Turkey</a> 👃, and  
       <a href="https://turkeymedicals.com/face-lift/jaw-augmentation" class="underline font-bold hover:text-red-400">Jawline Definition Surgery in Turkey</a> 💎.
+      <a href="https://turkeymedicals.com/face-lift/brow-lift" class="underline font-bold hover:text-red-400">Brow Lift Operations in Istanbul & Antalya</a> ✨,  
+      <a href="https://turkeymedicals.com/face-lift/canthoplasty" class="underline font-bold hover:text-red-400">Canthoplasty Eye Surgery in Turkey</a> 👁️,  
+      <a href="https://turkeymedicals.com/face-lift/cheek-augmentation" class="underline font-bold hover:text-red-400">Cheek Enhancement in Antalya</a> 😊,  
+      <a href="https://turkeymedicals.com/face-lift/jaw-augmentation" class="underline font-bold hover:text-red-400">Jaw Augmentation & Contouring in Turkey</a> ⚖️.
     </p>
 
     <p class="text-md md:text-lg mb-8 max-w-4xl mx-auto text-gray-200">
@@ -653,10 +653,10 @@
 <!-- Floating Buttons -->
 <div class="fixed bottom-6 right-6 flex flex-col space-y-4 z-50">
   <a href="https://wa.me/905071636297" target="_blank" class="bg-red-500 text-black hover:bg-red-600 px-5 py-3 rounded-full shadow-lg flex items-center space-x-3 transform hover:scale-110 transition-transform duration-300 font-semibold">
-    <span>📱</span><span>WhatsApp Us - Turkey Medicals</span>
+    <span>📱</span><span>Contact Us Via WhatsApp</span>
   </a>
   <a href="https://turkeymedicals.com" target="_blank" class="bg-red-500 text-black hover:bg-red-600 px-5 py-3 rounded-full shadow-lg flex items-center space-x-3 transform hover:scale-110 transition-transform duration-300 font-semibold">
-    <span>💰</span><span>Hair & Plastic Surgery Price List</span>
+    <span>💰</span><span>Hair & Surgery Prices Turkey</span>
   </a>
 </div>
 
