--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container mx-auto flex justify-between items-center py-4 px-6">
     <div class="text-2xl font-bold flex items-center space-x-2">
       <span class="text-yellow-300">💎</span>
-      <span>Turkey Medicals – HairTransplantIstanbul Guide</span>
+      <span>Turkey Medicals Cost – HairTransplantIstanbul Guide</span>
     </div>
 
     <nav class="hidden md:flex space-x-6 font-semibold">
