--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="underline hover:text-gray-200" href="https://wa.me/905071636297" target="_blank">+90 507-163-6297</a>
       </span>
       <span>✉️ Email: 
-        <a class="underline hover:text-gray-200" href="mailto:patient@turkeymedicals.com">patient@turkeymedicals.com</a>
+        <a class="underline hover:text-gray-200" href="mailto:info@turkeymedicals.com">info@turkeymedicals.com</a>
       </span>
       <span>📂: 
         <a class="underline hover:text-gray-200" href="https://turkish-property-world.com" target="_blank">
@@ -620,7 +620,7 @@
     <!-- Contact Info -->
     <div>
       <h3 class="text-xl font-bold mb-4 text-red-500">📞 Contact & Follow Us</h3>
-      <p class="mb-1">📧 <span class="font-semibold">info@turkeymedicals.com</span></p>
+      <p class="mb-1">📧 <span class="font-semibold">patient@turkeymedicals.com</span></p>
       <p class="mb-2">📞 <span class="font-semibold">+90 507 163 6297</span></p>
 
       <!-- Social Media Links -->
