--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </span>
       <span>📂: 
         <a class="underline hover:text-gray-200" href="https://turkish-property-world.com" target="_blank">
-          Medical & Hair Clinic Sites
+          Hair & Medical Clinic Sites
         </a>
       </span>
       <span>📂:     
