--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <nav class="hidden md:flex space-x-6 font-semibold">
       <a href="#hero" class="hover:text-yellow-300 transition">Home</a>
       <a href="#videos" class="hover:text-yellow-300 transition">Videos</a>
-      <a href="#services" class="hover:text-yellow-300 transition">Services</a>
+      <a href="#services" class="hover:text-yellow-300 transition">Prices</a>
       <a href="#why-choose-us" class="hover:text-yellow-300 transition">Why Choose Us</a>
       <a href="#travel" class="hover:text-yellow-300 transition">Travel</a>
       <a href="#faq" class="hover:text-yellow-300 transition">FAQ</a>
@@ -467,7 +467,6 @@
 </section>
 
 <!-- FAQ Section -->
-<!-- FAQ Section -->
 <section id="faq" class="py-16 md:py-20 bg-black text-white">
   <div class="container mx-auto max-w-6xl px-6">
 
@@ -494,7 +493,7 @@
         </summary>
         <div class="px-6 py-4 bg-black/80">
           <p>
-            <a href="https://turkeymedicals.com/hair-transplant" class="text-red-400 font-semibold hover:underline">Hair Transplant in Turkey</a> restores hair using FUE or DHI techniques, relocating healthy follicles to thinning or balding areas for natural hair growth.
+            Hair Transplant in Turkey restores hair using FUE or DHI techniques, relocating healthy follicles to thinning or balding areas for natural hair growth.
           </p>
         </div>
       </details>
@@ -505,7 +504,7 @@
         </summary>
         <div class="px-6 py-4 bg-black/80">
           <p>
-            Yes, you can combine procedures such as <a href="https://turkeymedicals.com/fat-transfer" class="text-red-400 font-semibold hover:underline">Fat Transfer</a>, <a href="https://turkeymedicals.com/breast" class="text-red-400 font-semibold hover:underline">Breast Surgery</a>, <a href="https://turkeymedicals.com/face-lift" class="text-red-400 font-semibold hover:underline">Face Lift</a>, and <a href="https://turkeymedicals.com/tummy-tuck" class="text-red-400 font-semibold hover:underline">Tummy Tuck</a> for comprehensive aesthetic improvement.
+            Yes, you can combine procedures such as Fat Transfer, Breast Surgery</a>, Face Lift</a>, and <a href="https://turkeymedicals.com/tummy-tuck" class="text-red-400 font-semibold hover:underline">Tummy Tuck</a> for comprehensive aesthetic improvement.
           </p>
         </div>
       </details>
