--- a/index.html
+++ b/index.html
@@ -26,20 +26,12 @@
   <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between px-4 py-2 gap-2">
     <div class="flex items-center gap-4">
       <span>💬 WhatsApp: 
-        <a class="underline hover:text-gray-200" href="https://wa.me/905071636297" target="_blank">+90 507-163-6297</a>
+        <a class="underline hover:text-yellow-300" href="https://wa.me/905071636297" target="_blank">+90 507-163-6297</a>
       </span>
       <span>✉️ Email: 
-        <a class="underline hover:text-gray-200" href="mailto:info@turkeymedicals.com">info@turkeymedicals.com</a>
+        <a class="underline hover:text-yellow-300" href="mailto:patient@turkeymedicals.com" target="_blank">patient@turkeymedicals.com</a>
       </span>
-      <span>📂: 
-        <a class="underline hover:text-gray-200" href="https://turkish-property-world.com" target="_blank">
-          Hair & Medical Clinic Sites
-        </a>
-      </span>
-      <span>📂:     
-        <a class="underline hover:text-gray-200" href="https://hairclinicistanbul.co" target="_blank">
-          https://hairclinicistanbul.co
-           </a>
+
     </div>
   </div>
 </div>
